--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,9 @@
 set-option -sa terminal-overrides ",xterm*:Tc"
 set -g mouse on
 
+# tmux resurrect plugin
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+
 unbind C-b
 set -g prefix C-Space
 bind C-Space send-prefix
